
enum ResultCode
{
	NoError = 0
	GameNotReady
}

struct ServerInfo{
    IP      string
    Port    int32
}


[AutoMsgID Codec:"protoplus" Service: "login"]
struct LoginREQ {
    Version string
	Platform string
	UID string
}


[AutoMsgID Codec:"protoplus"]
struct LoginACK {
	Result ResultCode
	Server ServerInfo
	GameToken string
}


[AutoMsgID Codec:"protoplus" Service: "game" RouteRule: "pass"]
struct VerifyREQ {
	GameToken string
}


[AutoMsgID Codec:"protoplus"]
struct VerifyACK {
	Result ResultCode
}


[AutoMsgID Codec:"protoplus" Service: "game" RouteRule: "auth"]
struct ChatREQ {
	Content string
}

[AutoMsgID Codec:"protoplus"]
struct ChatACK{
	Content string
}